Add Jlama inference (#167)
* Add Jlama inference

* Use the quantized model in CI

* Use the jlama quantized model by default

* Add instructions for running tests with Jlama

* Separate into maven profiles

---------

Co-authored-by: Eric Deandrea <eric@ericdeandrea.dev>